# Minigrid

./: pyproject.toml  random_walk.py
minigrid/: __init__.py  benchmark.py  manual_control.py  minigrid_env.py  wrappers.py
minigrid/core/: actions.py  agent.py  constants.py  grid.py  mission.py  roomgrid.py  world_object.py
minigrid/envs/: blockedunlockpickup.py  crossing.py  distshift.py  dynamicobstacles.py  empty.py  fetch.py  fourrooms.py  gotodoor.py  gotoobject.py  keycorridor.py  lavagap.py  lockedroom.py  memory.py  obstructedmaze.py  putnear.py  unlockpickup.py
minigrid/envs/babyai/: goto.py  putnext.py  unlock.py
minigrid/envs/babyai/core/: levelgen.py  roomgrid_level.py  verifier.py
minigrid/envs/wfc/: wfcenv.py
minigrid/utils/: baby_ai_bot.py
tests/: test_baby_ai_bot.py  test_envs.py  test_obstructed_maze.py  test_wrappers.py
